# join-sound-johnson

./: .gitignore  Cargo.toml  README.md  nixpacks.toml  shell.nix
.github/workflows/: rust.yml
migrations/2022-03-01-144020_create_joinsound/: down.sql  up.sql
migrations/2022-03-01-150503_discord_id_index/: down.sql  up.sql
migrations/2022-03-01-150729_guild_id_index/: down.sql  up.sql
migrations/2022-07-07-220437_add_timestamp/: down.sql  up.sql
migrations/2024-10-12-233017_drop_url/: down.sql  up.sql
src/: database.rs  event_listener.rs  main.rs  schema.rs  youtube.rs
src/backend/: attachments.rs  database.rs  file.rs  lib.rs  models.rs  schema.rs  youtube.rs
src/database/: lib.rs  mod.rs  models.rs  schema.rs  youtube.rs
src/subcommands/: discord_commands.rs  media_migration.rs  migrate_db.rs  mod.rs
