[package]
name = "join-sound-johnson"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = ["mysql", "chrono"] }
chrono = "0.4.37"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
poise = { version = "0.6.1", features = ["collector", "cache"] }
songbird = "0.4.1"
regex = "1.10.1"

[dependencies.serenity]
default-features = false
features = ["voice", "client", "gateway", "model", "cache"]
version = "0.12.1"

[dependencies.symphonia]
version = "0.5.4"
features = ["all"]

[lib]
name = "jsj_backend"
path = "src/backend/lib.rs"


[[bin]]
name = "join-sound-johnson"
path = "src/main.rs"
