[package]
name = "join-sound-johnson"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.23.0"
opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.15.0", features = [
  "trace",
  "http-proto",
  "reqwest-client",
] }

diesel = { version = "2.1.3", features = ["mysql", "chrono"] }
chrono = "0.4.37"
dotenv = "0.15.0"
regex = "1.10.1"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

poise = { version = "0.6.1", features = ["collector", "cache"] }
songbird = "0.4.2"
rustls = "0.23.11"

[dependencies.serenity]
default-features = false
features = ["voice", "client", "gateway", "model", "cache"]
version = "0.12.2"

[dependencies.symphonia]
version = "0.5.4"
features = ["all"]

[lib]
name = "jsj_backend"
path = "src/backend/lib.rs"


[[bin]]
name = "join-sound-johnson"
path = "src/main.rs"
