[package]
name = "join-sound-johnson"
version = "1.3.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.23.0"
opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.15.0", features = [
  "trace",
  "http-proto",
  "reqwest-client",
] }

diesel = { version = "2.2.4", features = ["mysql", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["mysql"] }
chrono = "0.4.38"
dotenv = "0.15.0"
regex = "1.11.1"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

poise = { version = "0.6.1", features = ["collector", "cache"] }
songbird = "0.4.6"
rustls = "0.23.17"
rust-s3 = "0.35.1"
clap = { version = "4.5.37", features = ["derive"] }

[dependencies.serenity]
default-features = false
features = ["voice", "client", "gateway", "model", "cache"]
version = "0.12.4"

[dependencies.symphonia]
version = "0.5.4"
features = ["all"]

[lib]
name = "jsj_backend"
path = "src/backend/lib.rs"


[[bin]]
name = "join-sound-johnson"
path = "src/main.rs"
